--- a/khyeras/_dev/styles/khyeras_light_v1/theme/scss/_responsive.scss
+++ b/khyeras/_dev/styles/khyeras_light_v1/theme/scss/_responsive.scss
@@ -936,6 +936,14 @@
 			}
 		}
 	}
+	.quick-links.quick-links-filter {
+		padding-right: 0;
+		.card-filter {
+			position: static;
+			display: block;
+			margin: 10px 0 0 0;
+		}
+	}	
 	.excerpt, .excerpt-simple {
 		.excerpt-details {
 			.excerpt-title, .icon-wrapper {
