--- a/khyeras/_dev/styles/khyeras_v1/template/pages_achievements.html
+++ b/khyeras/_dev/styles/khyeras_v1/template/pages_achievements.html
@@ -685,9 +685,23 @@
 		<div class="content pages-content">
 			{{ PAGE_CONTENT }}
 
-			{% set completed_achievements = KHY_USER_ACHIEVEMENTS | replace({', ': ','}) | split(',') %}
-
 			{% if achievements %}
+
+				{% set completed_achievements = KHY_USER_ACHIEVEMENTS | replace({', ': ','}) | split(',') %}
+
+				<p class="quick-links quick-links-top{% if KHY_USER_ACHIEVEMENTS %} quick-links-filter{% endif %}">
+					<strong>Quick Links:</strong>
+					{% for key, achievement in achievements %}
+						{% set section_id = (key | replace({' ': '-'}) | lower) %}
+						<a href="#{{ section_id }}">{{ key }}</a>{{ !loop.last ? ' |' : '' }}
+					{% endfor %}
+					{% if KHY_USER_ACHIEVEMENTS %}
+						<span class="card-filter">
+							<a class="card-filter-button"><i class="icon rpg-icon rpg-pokecog"></i><span>Show/hide completed</span></a>
+						</span>
+					{% endif %}
+				</p>
+
 				{% for key, achievement in achievements %}
 					{% set section_id = (key | replace({' ': '-'}) | lower) %}
 					<section id="{{ section_id }}" class="page-content-section">
@@ -695,7 +709,7 @@
 						<div class="card-grid">
 							{% for detail in achievement %}
 								{% set card_id = section_id  ~ '-' ~ (detail.title | replace({'"' : '', ',' : '', '\'' : '', ' ': '-'}) | lower) %}
-								<div id="{{ card_id }}" class="card-block{% if card_id in completed_achievements %} card-completed{% endif %}">
+								<div id="{{ card_id }}" class="card-block{% if card_id in completed_achievements %} card-changed{% endif %}">
 									<h5 class="card-title">{{ detail.title }}</h5>
 									{% if card_id in completed_achievements %}
 										<p class="card-completed-text"><i class="icon rpg-icon rpg-stars-stack" aria-hidden="true"></i>Achievement complete!</p>
