--- a/khyeras/styles/khyeras_v1/template/custom/quick_links.html
+++ b/khyeras/styles/khyeras_v1/template/custom/quick_links.html
@@ -20,7 +20,7 @@
 	'app/lore-races-lumeacia': race_links,
 	'app/lore-races-uedrahc': race_links,
 	'app/lore-races-fae': race_links,
-	'app/lore-races-half-breed': ['***'],
+	'app/lore-races-half-breed': ['Playing a Half-Breed', 'Dragon', 'Dwarf', 'Elemental', 'Fae', 'Ghost', 'Human', 'Kerasoka', 'Korcai', 'Lumeacia', 'Shapeshifter', 'Ue\'drahc'],
 	'app/lore-religion-archaicism': ['Dainyil', 'Ixaziel', 'Ny\'tha', 'Pheriss', 'Ristgir'],
 	'app/lore-religion-idolism': ['Ahm\'kela', 'Bhelest', 'Cecilia', 'Esyrax', 'Faryv', 'Faunir', 'Iodrah', 'Kaxitaki', 'Kelorha', 'Lahiel', 'Misanyt', 'Nilbein', 'Veditova'],
 	'app/lore-religion-other': ['Agnosticism', 'Atheism'],
@@ -47,7 +47,7 @@
 	'app/setting-ninraih-ajteire': setting_links,
 	'app/setting-irtuen-reaches': setting_main_links,
 	'app/setting-irtuen-reaches-domrhask': setting_links,
-	'app/gameplay-achievements': ['***'],
+	'app/gameplay-achievements': ['Guidelines', 'Fellsgard', 'Verdant Row', 'Ajteire', 'Domrhask', 'Other'],
 	'app/gameplay-stats': ['Hit Points (or HP)', 'Magic Points (or MP)']
 } %}
 
