--- a/khyeras/_dev/styles/khyeras_v1/template/custom/header_content.html
+++ b/khyeras/_dev/styles/khyeras_v1/template/custom/header_content.html
@@ -1,94 +1,94 @@
 {% set quotes = [
 	{
-		text   : 'When the planet was cursed to fade and wither, five entities made their way through the fissures in Khy&apos;eras to see if anything could be salvaged. These beings were Eidolons, ethereal spirits that believed they could bring the realm back from the grasp of death and create an existence from the ruins.',
-		author : 'Khy&apos;eras history'
+		text : 'When the planet was cursed to fade and wither, five entities made their way through the fissures in Khy\'eras to see if anything could be salvaged. These beings were Eidolons, ethereal spirits that believed they could bring the realm back from the grasp of death and create an existence from the ruins.',
+		author : 'Khy\'eras history'
 	},
 	{
-		text   : 'Not so long ago, people could pray to the Eidolons, but faith in those deities was discarded. Temples were destroyed, books were burned, and voices went silent. The races were afraid that Bhelest and the hydra would hear them.',
-		author : 'Khy&apos;eras history'
+		text : 'Not so long ago, people could pray to the Eidolons, but faith in those deities was discarded. Temples were destroyed, books were burned, and voices went silent. The races were afraid that Bhelest and the hydra would hear them.',
+		author : 'Khy\'eras history'
 	},
 	{
-		text   : 'The owner of the lighthouses had a daughter by the name of Cecilia who was about twenty-two years. The girl had no real skills as far as combat and did not have the tactical aptitude to lead an army, but she was an inventor and had ingenious ideas.',
-		author : 'Khy&apos;eras history'
+		text : 'The owner of the lighthouses had a daughter by the name of Cecilia who was about twenty-two years. The girl had no real skills as far as combat and did not have the tactical aptitude to lead an army, but she was an inventor and had ingenious ideas.',
+		author : 'Khy\'eras history'
 	},
 	{
-		text   : 'Explorers journeyed out of cities to uncover what else Khy&apos;eras had to offer besides war. People said that those who left found only death, but others found something else entirely - hope and adventures.',
-		author : 'Khy&apos;eras history'
+		text : 'Explorers journeyed out of cities to uncover what else Khy\'eras had to offer besides war. People said that those who left found only death, but others found something else entirely - hope and adventures.',
+		author : 'Khy\'eras history'
 	},
 	{
-		text   : 'Many people have blamed history&apos;s wrong-doings on Dragons. Though these creatures have chosen to remain hidden, they have learned to speak and have brought in Ue&apos;drahc and Human scholars to instruct them on subjects such as reading, recent news, and whatever concepts they are interested in.',
+		text : 'Many people have blamed history\'s wrong-doings on Dragons. Though these creatures have chosen to remain hidden, they have learned to speak and have brought in Ue\'drahc and Human scholars to instruct them on subjects such as reading, recent news, and whatever concepts they are interested in.',
 		author : 'About Dragons'
 	},
 	{
-		text   : 'Through the science of "Hybridization", a blood union of Dragon-Human called the "Ue&apos;drahc" was designed and birthed. Able to adventure, the Ue&apos;drahc still choses to cloak its unique appearance as they often frighten Khy&apos;eras folk.',
-		author : 'About Ue&apos;drahcs'
+		text : 'Through the science of "Hybridization", a blood union of Dragon-Human called the "Ue\'drahc" was designed and birthed. Able to adventure, the Ue\'drahc still choses to cloak its unique appearance as they often frighten Khy\'eras folk.',
+		author : 'About Ue\'drahcs'
 	},
 	{
-		text   : 'While several Shapeshifters used their talent for misfortune, the remainder exercised their abilities for the exact opposite and illustrated to the rest of the world that their kind could be trustworthy.',
+		text : 'While several Shapeshifters used their talent for misfortune, the remainder exercised their abilities for the exact opposite and illustrated to the rest of the world that their kind could be trustworthy.',
 		author : 'About Shapeshifters'
 	},
 	{
-		text   : 'Once part of a larger population of Elves, the Kerasoka broke away and formed their own tribe when an agreement regarding magic and the wars on Bhelest could not be reached. As the Kerasoka continued to disobey and retaliate against Bhelest, the tyrannical scholar stripped them of their magic, an ability which never returned.',
+		text : 'Once part of a larger population of Elves, the Kerasoka broke away and formed their own tribe when an agreement regarding magic and the wars on Bhelest could not be reached. As the Kerasoka continued to disobey and retaliate against Bhelest, the tyrannical scholar stripped them of their magic, an ability which never returned.',
 		author : 'About Kerasoka'
 	},
 	{
-		text   : 'As the Lumeacia departed from Tviyr, presumably to the Northwest, they shied from the rest of the world and continued to study all subjects and practice magic.',
+		text : 'As the Lumeacia departed from Tviyr, presumably to the Northwest, they shied from the rest of the world and continued to study all subjects and practice magic.',
 		author : 'About Lumeacia'
 	},
 	{
-		text   : 'Humans have successfully convinced much of the folk on Khy&apos;eras that they are not to be wiped from the world without difficulty. Quietly stirring inside each is motivation that drives them to survive, explore, and conform to the changing world.',
+		text : 'Humans have successfully convinced much of the folk on Khy\'eras that they are not to be wiped from the world without difficulty. Quietly stirring inside each is motivation that drives them to survive, explore, and conform to the changing world.',
 		author : 'About Humans'
 	},
 	{
-		text   : 'Elementals are beings made from magic and Aura, a combination they claim to be the same as the Eidolons. As such, many Elementals can be very arrogant and believe their lineage allows them to inherit rule over Khy&apos;eras.',
+		text : 'Elementals are beings made from magic and Aura, a combination they claim to be the same as the Eidolons. As such, many Elementals can be very arrogant and believe their lineage allows them to inherit rule over Khy\'eras.',
 		author : 'About Elementals'
 	},
 	{
-		text   : 'In a time come and gone, the Fae originated from one of Ixaziel&apos;s visions of fascinating, dream-like birds. But, the Eidolon of all things nature brought them to the earth where they transformed into shorter-sized Humans with gossamer wings.',
+		text : 'In a time come and gone, the Fae originated from one of Ixaziel\'s visions of fascinating, dream-like birds. But, the Eidolon of all things nature brought them to the earth where they transformed into shorter-sized Humans with gossamer wings.',
 		author : 'About Fae'
 	},
 	{
-		text   : 'The cessation of Domrhask&apos;s Irenohl brought forth the Dwarves who detached from the inside of the rock golems. With a firmer grasp on situational reality and a range of identifiable emotions, the Dwarves formulated an agenda to reform their beloved city and make it an impenetrable force.',
+		text : 'The cessation of Domrhask\'s Irenohl brought forth the Dwarves who detached from the inside of the rock golems. With a firmer grasp on situational reality and a range of identifiable emotions, the Dwarves formulated an agenda to reform their beloved city and make it an impenetrable force.',
 		author : 'About Dwarves'
 	},
 	{
-		text   : 'The existence of the Ghost race is due to the unfortunate result of a murder plot set in motion by a vengeful and greedy man who poisoned patrons in a Verdant Row tavern. His crime did not go unnoticed as a handful of the men awoken as specters to hunt him down.',
+		text : 'The existence of the Ghost race is due to the unfortunate result of a murder plot set in motion by a vengeful and greedy man who poisoned patrons in a Verdant Row tavern. His crime did not go unnoticed as a handful of the men awoken as specters to hunt him down.',
 		author : 'About Ghosts'
 	},
 	{
-		text   : 'The Korcai race was the result an experiment by Bhelest where he conned a woman named Victoria Erair into drinking vial of virus-laced blood. This transformed Victoria into the undead, but with heightened reflexes and fortitude.',
+		text : 'The Korcai race was the result an experiment by Bhelest where he conned a woman named Victoria Erair into drinking vial of virus-laced blood. This transformed Victoria into the undead, but with heightened reflexes and fortitude.',
 		author : 'About Korcai'
 	},
 	{
-		text   : 'Fellsgard is the foundation of Khy&apos;eras&apos; history - a mark in time where Cecilia the Hero began a battle that would finally defeat Bhelest. Through years of reconstruction, it has become a vibrant and lively city.',
+		text : 'Fellsgard is the foundation of Khy\'eras\' history - a mark in time where Cecilia the Hero began a battle that would finally defeat Bhelest. Through years of reconstruction, it has become a vibrant and lively city.',
 		author : 'About Fellsgard'
 	},
 	{
-		text   : 'Depending on the day, Verdant Row can be either chaotic or peaceful to the fatigued adventurer. This town serves as a temporary stop between many of Khy&apos;eras&apos; cities where a person can easily refuel by catching a few winks of sleep and grabbing a bite to eat.',
+		text : 'Depending on the day, Verdant Row can be either chaotic or peaceful to the fatigued adventurer. This town serves as a temporary stop between many of Khy\'eras\' cities where a person can easily refuel by catching a few winks of sleep and grabbing a bite to eat.',
 		author : 'About Verdant Row'
 	},
 	{
-		text   : 'In the heart of Ninraih&apos;s jungles, the Fae created the city of Ajteire. To further protect themselves from the undead, they used the magic of fireflies and later, forged a partnership with the Kerasoka Elves.',
+		text : 'In the heart of Ninraih\'s jungles, the Fae created the city of Ajteire. To further protect themselves from the undead, they used the magic of fireflies and later, forged a partnership with the Kerasoka Elves.',
 		author : 'About Ajteire'
 	},
 	{
-		text   : 'Domrhask, Khy&apos;eras&apos; northernmost city situated in the snow-filled Irtuen Reaches, was established by the ancient Irenohl, a race of stone golems. As they built the city, Bhelest took notice of the previously hidden Domrhask and its ample amount of resources that could be used during the war effort. ',
+		text : 'Domrhask, Khy\'eras\' northernmost city situated in the snow-filled Irtuen Reaches, was established by the ancient Irenohl, a race of stone golems. As they built the city, Bhelest took notice of the previously hidden Domrhask and its ample amount of resources that could be used during the war effort. ',
 		author : 'About Domrhask'
 	}
 ]%}
 
 <div id="site-description" class="site-description">
 	<h1>
-		<a href="<!-- IF U_SITE_HOME -->{U_SITE_HOME}<!-- ELSE -->{U_INDEX}<!-- ENDIF -->" title="<!-- IF U_SITE_HOME -->{L_SITE_HOME}<!-- ELSE -->{L_INDEX}<!-- ENDIF -->">{SITENAME}</a>
+		<a href="{% if U_SITE_HOME %}{U_SITE_HOME}{% else %}{U_INDEX}{% endif %}" title="{% if U_SITE_HOME %}{L_SITE_HOME}{% else %}{L_INDEX}{% endif %}">{SITENAME}</a>
 	</h1>
 	<h3>{SITE_DESCRIPTION}</h3>
 	<p class="skiplink"><a href="#start_here">{L_SKIP}</a></p>
 </div>
-{% if quotes %}
+
+{% if quotes && (quotes | length) > 0 %}
+	{% set quote_num = random((quotes | length) - 1) %}
 	<div class="header-divider"></div>
 	<div id="site-quotes" class="site-quotes">
-		{% set quote_num = random((quotes|length) - 1) %}
-
 		<p>{{ quotes[quote_num].text }}</p>
 		{% if quotes[quote_num].author %}
 			<p class="quote-author"><em>- {{ quotes[quote_num].author }}</em></p>
